@@ -1,3 +1,12 @@
+2013-09-21  Anders Carlsson  <andersca@apple.com>
+
+        Fix the non-DFG build.
+
+        * interpreter/Interpreter.cpp:
+        (JSC::unwindCallFrame):
+        * interpreter/StackVisitor.cpp:
+        (JSC::StackVisitor::Frame::r):
+
 2013-09-21  Filip Pizlo  <fpizlo@apple.com>
 
         Get rid of IsInlinedCodeTag and its associated methods since it's unused
